--- a/home.html
+++ b/home.html
@@ -21,7 +21,6 @@
   --gold:#f59e0b;
   --radius:18px;
   --shadow:0 20px 60px rgba(0,0,0,.45);
-  --glow:0 0 0 rgba(34,197,94,0);
 }
 
 *{box-sizing:border-box}
@@ -36,164 +35,55 @@ body{
   min-height:100vh;
 }
 
-/* HEADER */
 .header{
   padding:22px 26px;
   border-bottom:1px solid var(--grid);
   background:linear-gradient(180deg,#020617,#020617cc);
-  position:sticky;
-  top:0;
-  z-index:10;
-  backdrop-filter: blur(6px);
+  position:sticky; top:0; z-index:10; backdrop-filter: blur(6px);
 }
-.header h1{
-  margin:0;
-  font-size:24px;
-  font-weight:900;
-  letter-spacing:.2px;
-}
-.header small{
-  color:var(--muted);
-  font-weight:600;
+.header h1{margin:0;font-size:24px;font-weight:900}
+.header small{color:var(--muted)}
+
+.container{padding:22px 24px 40px; max-width:1400px; margin:0 auto}
+
+.filters{display:flex; gap:10px; align-items:center; margin-bottom:14px}
+.select{
+  background:#020617;color:#e5e7eb;border:1px solid var(--grid);
+  border-radius:999px;padding:8px 14px;font-weight:800
 }
 
-/* CONTAINER */
-.container{
-  padding:22px 24px 40px;
-  max-width:1400px;
-  margin:0 auto;
-}
+.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:16px; margin-bottom:26px}
 
-/* GRID KPIs */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:16px;
-  margin-bottom:26px;
-}
-
-/* CARD */
 .card{
-  position:relative;
-  background:
-    linear-gradient(180deg,#020617,#020617cc);
-  border:1px solid var(--grid);
-  border-radius:var(--radius);
-  padding:18px 18px 16px;
-  box-shadow:var(--shadow);
-  overflow:hidden;
-  transition:.25s ease;
+  position:relative; background:linear-gradient(180deg,#020617,#020617cc);
+  border:1px solid var(--grid); border-radius:var(--radius);
+  padding:18px; box-shadow:var(--shadow); transition:.25s ease;
 }
-.card::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    radial-gradient(120px 60px at 0% 0%, rgba(255,255,255,.06), transparent 40%),
-    radial-gradient(180px 80px at 100% 0%, rgba(34,197,94,.08), transparent 45%);
-  pointer-events:none;
-}
-.card::after{
-  content:"";
-  position:absolute;
-  inset:auto -40% -60% -40%;
-  height:140px;
-  background:radial-gradient(closest-side,rgba(34,197,94,.18),transparent);
-  pointer-events:none;
-}
+.card:hover{transform:translateY(-4px); border-color:#2b3b55}
+.card small{color:var(--muted); font-weight:800; text-transform:uppercase; font-size:11px}
+.card b{display:block; margin-top:6px; font-size:34px; font-weight:900; color:var(--accent)}
+.card .sub{font-size:12px; color:var(--muted)}
+.card.warn b{color:var(--gold)} .card.danger b{color:var(--danger)}
 
-.card:hover{
-  transform:translateY(-4px);
-  border-color:#2b3b55;
-  box-shadow:0 28px 80px rgba(0,0,0,.6);
-}
-
-/* TEXTO DO CARD */
-.card small{
-  color:var(--muted);
-  font-weight:700;
-  letter-spacing:.4px;
-  text-transform:uppercase;
-  font-size:11px;
-}
-.card b{
-  display:block;
-  margin-top:4px;
-  font-size:34px;
-  font-weight:900;
-  letter-spacing:.5px;
-  color:var(--accent);
-}
-.card .sub{
-  margin-top:2px;
-  font-size:12px;
-  color:var(--muted);
-}
-
-/* VARIAÇÕES */
-.card.warn b{ color:var(--gold); }
-.card.danger b{ color:var(--danger); }
-
-/* SECTIONS */
 .section{
   margin-top:22px;
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+  grid-template-columns:repeat(2, 1fr);
   gap:18px;
 }
+@media(max-width:900px){ .section{grid-template-columns:1fr} }
 
-/* PANELS */
 .panel{
   background:linear-gradient(180deg,#020617,#020617cc);
-  border:1px solid var(--grid);
-  border-radius:var(--radius);
-  padding:16px 16px 18px;
-  box-shadow:var(--shadow);
-  transition:.2s ease;
+  border:1px solid var(--grid); border-radius:var(--radius);
+  padding:16px; box-shadow:var(--shadow)
 }
-.panel:hover{
-  border-color:#2b3b55;
-}
-.panel h3{
-  margin:0 0 10px;
-  font-size:14px;
-  color:#cbd5f5;
-  font-weight:800;
-  letter-spacing:.3px;
-  display:flex;
-  align-items:center;
-  gap:6px;
-}
+.panel h3{margin:0 0 10px; font-size:14px; color:#cbd5f5; font-weight:900}
 
-/* BADGES */
 .badge{
-  display:inline-block;
-  padding:6px 12px;
-  border-radius:999px;
-  font-size:12px;
-  font-weight:800;
-  border:1px solid var(--grid);
-  background:#0b1220;
-  margin:4px 6px 0 0;
-  transition:.15s ease;
-}
-.badge:hover{
-  border-color:#3b82f6;
-  color:#bfdbfe;
-}
-
-/* CANVAS */
-canvas{
-  max-width:100%;
-  background:transparent;
-}
-
-/* RESPONSIVO */
-@media (max-width: 720px){
-  .header h1{font-size:20px}
-  .card b{font-size:28px}
-  .container{padding:16px}
-  .panel{padding:14px}
+  display:inline-block; padding:6px 12px; border-radius:999px;
+  font-size:12px; font-weight:800; border:1px solid var(--grid);
+  background:#0b1220; margin:4px 6px 0 0
 }
 </style>
 </head>
@@ -205,21 +95,22 @@ canvas{
 </div>
 
 <div class="container">
+  <div class="filters">
+    <span class="badge">Filtrar por tipo</span>
+    <select id="filtroTipo" class="select">
+      <option value="">Todos os tipos</option>
+    </select>
+  </div>
 
   <div class="grid">
-    <div class="card"><small>Fichas técnicas</small><b id="kpiFichas">—</b><div class="sub">Total cadastradas</div></div>
+    <div class="card"><small>Fichas técnicas</small><b id="kpiFichas">—</b><div class="sub">Total</div></div>
     <div class="card"><small>Ingredientes</small><b id="kpiIngredientes">—</b><div class="sub">No sistema</div></div>
-    <div class="card warn"><small>Ingrediente mais usado</small><b id="kpiIngredienteTop">—</b><div class="sub" id="kpiIngredienteTopQtd">—</div></div>
-    <div class="card"><small>CMV médio</small><b id="kpiCmvMedio">—%</b><div class="sub">Saudável &lt; 35%</div></div>
-    <div class="card"><small>Impostos ativos</small><b id="kpiImpostos">—</b><div class="sub">Regras fiscais</div></div>
-    <div class="card danger"><small>Sem preço de venda</small><b id="kpiSemPreco">—</b><div class="sub">Fichas sem preço</div></div>
-
-    <div class="card"><small>Preço médio</small><b id="kpiPrecoMedio">—</b><div class="sub">Preço de venda</div></div>
-    <div class="card"><small>Custo médio</small><b id="kpiCustoMedio">—</b><div class="sub">Por ficha</div></div>
-    <div class="card"><small>Lucro médio</small><b id="kpiLucroMedio">—</b><div class="sub">Por ficha</div></div>
+    <div class="card warn"><small>Ingrediente top</small><b id="kpiIngredienteTop">—</b><div class="sub" id="kpiIngredienteTopQtd">—</div></div>
+    <div class="card"><small>CMV médio</small><b id="kpiCmvMedio">—%</b><div class="sub">&lt; 35% ideal</div></div>
+    <div class="card"><small>Preço médio</small><b id="kpiPrecoMedio">—</b><div class="sub">Venda</div></div>
+    <div class="card"><small>Custo médio</small><b id="kpiCustoMedio">—</b><div class="sub">Ficha</div></div>
+    <div class="card warn"><small>Lucro total</small><b id="kpiLucroTotal">—</b><div class="sub">Potencial</div></div>
     <div class="card danger"><small>CMV alto</small><b id="kpiCmvAlto">—</b><div class="sub">&gt; 35%</div></div>
-    <div class="card"><small>CMV saudável</small><b id="kpiCmvOk">—</b><div class="sub">≤ 35%</div></div>
-    <div class="card warn"><small>Lucro total</small><b id="kpiLucroTotal">—</b><div class="sub">Potencial estimado</div></div>
   </div>
 
   <div class="section">
@@ -228,19 +119,18 @@ canvas{
       <canvas id="graficoCmvTipo" height="180"></canvas>
     </div>
     <div class="panel">
-      <h3>🥇 Top 5 ingredientes mais usados</h3>
+      <h3>🥇 Top 5 ingredientes</h3>
       <canvas id="graficoTopIngredientes" height="180"></canvas>
     </div>
     <div class="panel">
-      <h3>🚨 Top 5 fichas com CMV mais alto</h3>
+      <h3>🚨 CMV mais alto</h3>
       <div id="listaCmvAlto"></div>
     </div>
     <div class="panel">
-      <h3>💎 Top 5 fichas mais lucrativas</h3>
+      <h3>💎 Mais lucrativos</h3>
       <div id="listaMaisLucrativas"></div>
     </div>
   </div>
-
 </div>
 
 <script>
@@ -251,94 +141,66 @@ const sb = supabase.createClient(
 
 const moeda = v => "R$ " + Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
+async function carregarTipos(){
+  const { data } = await sb.from("buffet").select("tipo");
+  const tipos = [...new Set((data||[]).map(i=>i.tipo).filter(Boolean))].sort();
+  filtroTipo.innerHTML = `<option value="">Todos os tipos</option>` +
+    tipos.map(t=>`<option value="${t}">${t}</option>`).join("");
+}
+
 async function carregarHome(){
-  document.getElementById("atualizadoEm").textContent =
-    "Atualizado em " + new Date().toLocaleString("pt-BR");
+  atualizadoEm.textContent = "Atualizado em " + new Date().toLocaleString("pt-BR");
 
-  const [{ count: fichas }, { count: ingredientes }, { count: impostos }] = await Promise.all([
-    sb.from("buffet").select("*", { count:"exact", head:true }),
-    sb.from("ingredientes").select("*", { count:"exact", head:true }),
-    sb.from("impostos").select("*", { count:"exact", head:true })
-  ]);
+  const tipo = filtroTipo.value;
+  const q = sb.from("buffet").select("id,nome,tipo,preco_venda");
+  const { data: buffet } = tipo ? await q.eq("tipo", tipo) : await q;
 
-  kpiFichas.textContent = fichas || 0;
-  kpiIngredientes.textContent = ingredientes || 0;
-  kpiImpostos.textContent = impostos || 0;
+  const { data: itens } = await sb.from("buffet_itens").select("buffet_id,custo_calculado, ingredientes(nome)");
+  const { count: ingredientes } = await sb.from("ingredientes").select("*",{count:"exact",head:true});
 
-  const { data: semPreco } = await sb.from("buffet").select("id").or("preco_venda.is.null,preco_venda.eq.0");
-  kpiSemPreco.textContent = semPreco?.length || 0;
+  kpiFichas.textContent = buffet?.length||0;
+  kpiIngredientes.textContent = ingredientes||0;
 
-  const { data: itens } = await sb.from("buffet_itens").select("buffet_id, ingredientes(nome)");
-  const uso = {};
+  const custoPorFicha={}, uso={};
   (itens||[]).forEach(i=>{
-    const nome = i.ingredientes?.nome || "—";
-    uso[nome] = (uso[nome]||0)+1;
+    custoPorFicha[i.buffet_id]=(custoPorFicha[i.buffet_id]||0)+Number(i.custo_calculado||0);
+    const n=i.ingredientes?.nome||"—"; uso[n]=(uso[n]||0)+1;
   });
+
   const topIng = Object.entries(uso).sort((a,b)=>b[1]-a[1]);
   if(topIng[0]){
     kpiIngredienteTop.textContent = topIng[0][0];
-    kpiIngredienteTopQtd.textContent = `Usado em ${topIng[0][1]} fichas`;
+    kpiIngredienteTopQtd.textContent = `Usado ${topIng[0][1]}x`;
   }
 
-  const { data: buffet } = await sb.from("buffet").select("id,nome,tipo,preco_venda");
-  const { data: itensCMV } = await sb.from("buffet_itens").select("buffet_id,custo_calculado");
-
-  const custoPorFicha = {};
-  (itensCMV||[]).forEach(i=>{
-    custoPorFicha[i.buffet_id] ??= 0;
-    custoPorFicha[i.buffet_id] += Number(i.custo_calculado||0);
-  });
-
-  let somaCMV=0, qtdCMV=0;
-  let totalPreco=0, totalCusto=0, totalLucro=0;
-  let cmvAlto=0, cmvOk=0;
-
-  const cmvPorTipo={}, qtdPorTipo={};
-  const rankingCmv=[], rankingLucro=[];
+  let somaCMV=0,qtd=0,precoT=0,custoT=0,lucroT=0,cmvAlto=0;
+  const rankingCmv=[], rankingLucro=[], cmvTipo={}, qtdTipo={};
 
   (buffet||[]).forEach(b=>{
-    const custo = custoPorFicha[b.id]||0;
-    const preco = Number(b.preco_venda||0);
+    const custo=custoPorFicha[b.id]||0, preco=Number(b.preco_venda||0);
     if(preco>0){
-      const lucro = preco - custo;
-      const cmv = (custo/preco)*100;
-
-      somaCMV+=cmv; qtdCMV++;
-      totalPreco+=preco; totalCusto+=custo; totalLucro+=lucro;
-
-      cmv > 35 ? cmvAlto++ : cmvOk++;
-
-      cmvPorTipo[b.tipo] = (cmvPorTipo[b.tipo]||0) + cmv;
-      qtdPorTipo[b.tipo] = (qtdPorTipo[b.tipo]||0) + 1;
-
-      rankingCmv.push({ nome:b.nome, cmv });
-      rankingLucro.push({ nome:b.nome, lucro });
+      const cmv=(custo/preco)*100, lucro=preco-custo;
+      somaCMV+=cmv; qtd++; precoT+=preco; custoT+=custo; lucroT+=lucro;
+      cmv>35 && cmvAlto++;
+      cmvTipo[b.tipo]=(cmvTipo[b.tipo]||0)+cmv;
+      qtdTipo[b.tipo]=(qtdTipo[b.tipo]||0)+1;
+      rankingCmv.push({nome:b.nome,cmv}); rankingLucro.push({nome:b.nome,lucro});
     }
   });
 
-  kpiCmvMedio.textContent = qtdCMV ? (somaCMV/qtdCMV).toFixed(1) : "0.0";
-  kpiPrecoMedio.textContent = moeda(totalPreco/qtdCMV || 0);
-  kpiCustoMedio.textContent = moeda(totalCusto/qtdCMV || 0);
-  kpiLucroMedio.textContent = moeda(totalLucro/qtdCMV || 0);
-  kpiCmvAlto.textContent = cmvAlto;
-  kpiCmvOk.textContent = cmvOk;
-  kpiLucroTotal.textContent = moeda(totalLucro);
+  kpiCmvMedio.textContent=(somaCMV/qtd||0).toFixed(1);
+  kpiPrecoMedio.textContent=moeda(precoT/qtd||0);
+  kpiCustoMedio.textContent=moeda(custoT/qtd||0);
+  kpiLucroTotal.textContent=moeda(lucroT);
+  kpiCmvAlto.textContent=cmvAlto;
 
-  new Chart(graficoCmvTipo,{
-    type:"bar",
-    data:{ labels:Object.keys(cmvPorTipo),
-      datasets:[{ data:Object.keys(cmvPorTipo).map(k=>(cmvPorTipo[k]/qtdPorTipo[k]).toFixed(1)) }]
-    },
-    options:{ plugins:{legend:{display:false}} }
-  });
+  new Chart(graficoCmvTipo,{type:"bar",data:{labels:Object.keys(cmvTipo),
+    datasets:[{data:Object.keys(cmvTipo).map(k=>(cmvTipo[k]/qtdTipo[k]).toFixed(1))}]},
+    options:{plugins:{legend:{display:false}}}});
 
-  new Chart(graficoTopIngredientes,{
-    type:"bar",
-    data:{ labels: topIng.slice(0,5).map(i=>i[0]),
-      datasets:[{ data: topIng.slice(0,5).map(i=>i[1]) }]
-    },
-    options:{ plugins:{legend:{display:false}} }
-  });
+  new Chart(graficoTopIngredientes,{type:"bar",data:{labels:topIng.slice(0,5).map(i=>i[0]),
+    datasets:[{data:topIng.slice(0,5).map(i=>i[1])}]},
+    options:{plugins:{legend:{display:false}}}});
 
   listaCmvAlto.innerHTML = rankingCmv.sort((a,b)=>b.cmv-a.cmv).slice(0,5)
     .map(i=>`<span class="badge">${i.nome} — ${i.cmv.toFixed(1)}%</span>`).join("");
@@ -347,7 +209,12 @@ async function carregarHome(){
     .map(i=>`<span class="badge">${i.nome} — ${moeda(i.lucro)}</span>`).join("");
 }
 
-carregarHome();
+filtroTipo.onchange = carregarHome;
+
+(async ()=>{
+  await carregarTipos();
+  await carregarHome();
+})();
 </script>
 </body>
 </html>
