--- a/home.html
+++ b/home.html
@@ -9,82 +9,48 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
+/* ====== TEMA PREMIUM ====== */
 :root{
-  --bg:#0b1220;
-  --bg-2:#020617;
-  --card:#020617;
-  --grid:#1e293b;
-  --text:#e5e7eb;
-  --muted:#94a3b8;
-  --accent:#22c55e;
-  --danger:#ef4444;
-  --gold:#f59e0b;
-  --radius:18px;
+  --bg:#0b1220; --bg-2:#020617; --card:#020617; --grid:#1e293b;
+  --text:#e5e7eb; --muted:#94a3b8; --accent:#22c55e;
+  --danger:#ef4444; --gold:#f59e0b; --radius:18px;
   --shadow:0 20px 60px rgba(0,0,0,.45);
 }
-
 *{box-sizing:border-box}
-
 body{
-  margin:0;
-  font-family:Inter,sans-serif;
-  color:var(--text);
-  background:
-    radial-gradient(1200px 600px at 10% -10%, #0b1220 0%, #020617 60%),
-    linear-gradient(180deg,#020617,#020617);
+  margin:0; font-family:Inter,sans-serif; color:var(--text);
+  background:radial-gradient(1200px 600px at 10% -10%, #0b1220 0%, #020617 60%),
+             linear-gradient(180deg,#020617,#020617);
   min-height:100vh;
 }
-
-.header{
-  padding:22px 26px;
-  border-bottom:1px solid var(--grid);
+.header{padding:22px 26px; border-bottom:1px solid var(--grid);
   background:linear-gradient(180deg,#020617,#020617cc);
-  position:sticky; top:0; z-index:10; backdrop-filter: blur(6px);
-}
+  position:sticky; top:0; z-index:10; backdrop-filter: blur(6px)}
 .header h1{margin:0;font-size:24px;font-weight:900}
 .header small{color:var(--muted)}
-
 .container{padding:22px 24px 40px; max-width:1400px; margin:0 auto}
-
 .filters{display:flex; gap:10px; align-items:center; margin-bottom:14px}
-.select{
-  background:#020617;color:#e5e7eb;border:1px solid var(--grid);
-  border-radius:999px;padding:8px 14px;font-weight:800
-}
-
-.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:16px; margin-bottom:26px}
-
-.card{
-  position:relative; background:linear-gradient(180deg,#020617,#020617cc);
+.select{background:#020617;color:#e5e7eb;border:1px solid var(--grid);
+  border-radius:999px;padding:8px 14px;font-weight:800}
+.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:16px; margin-bottom:26px}
+.card{background:linear-gradient(180deg,#020617,#020617cc);
   border:1px solid var(--grid); border-radius:var(--radius);
-  padding:18px; box-shadow:var(--shadow); transition:.25s ease;
-}
+  padding:18px; box-shadow:var(--shadow); transition:.25s}
 .card:hover{transform:translateY(-4px); border-color:#2b3b55}
 .card small{color:var(--muted); font-weight:800; text-transform:uppercase; font-size:11px}
 .card b{display:block; margin-top:6px; font-size:34px; font-weight:900; color:var(--accent)}
 .card .sub{font-size:12px; color:var(--muted)}
 .card.warn b{color:var(--gold)} .card.danger b{color:var(--danger)}
-
-.section{
-  margin-top:22px;
-  display:grid;
-  grid-template-columns:repeat(2, 1fr);
-  gap:18px;
-}
+.section{margin-top:22px; display:grid; grid-template-columns:repeat(2,1fr); gap:18px}
 @media(max-width:900px){ .section{grid-template-columns:1fr} }
-
-.panel{
-  background:linear-gradient(180deg,#020617,#020617cc);
+.panel{background:linear-gradient(180deg,#020617,#020617cc);
   border:1px solid var(--grid); border-radius:var(--radius);
-  padding:16px; box-shadow:var(--shadow)
-}
+  padding:16px; box-shadow:var(--shadow)}
 .panel h3{margin:0 0 10px; font-size:14px; color:#cbd5f5; font-weight:900}
-
-.badge{
-  display:inline-block; padding:6px 12px; border-radius:999px;
+.badge{display:inline-block; padding:6px 12px; border-radius:999px;
   font-size:12px; font-weight:800; border:1px solid var(--grid);
-  background:#0b1220; margin:4px 6px 0 0
-}
+  background:#0b1220; margin:4px 6px 0 0}
 </style>
 </head>
 <body>
@@ -114,47 +80,29 @@ body{
   </div>
 
   <div class="section">
-    <div class="panel">
-      <h3>📊 CMV médio por tipo</h3>
-      <canvas id="graficoCmvTipo" height="180"></canvas>
-    </div>
-    <div class="panel">
-      <h3>🥇 Top 5 ingredientes</h3>
-      <canvas id="graficoTopIngredientes" height="180"></canvas>
-    </div>
-    <div class="panel">
-      <h3>🚨 CMV mais alto</h3>
-      <div id="listaCmvAlto"></div>
-    </div>
-    <div class="panel">
-      <h3>💎 Mais lucrativos</h3>
-      <div id="listaMaisLucrativas"></div>
-    </div>
+    <div class="panel"><h3>📊 CMV médio por tipo</h3><canvas id="graficoCmvTipo" height="180"></canvas></div>
+    <div class="panel"><h3>🥇 Top 5 ingredientes</h3><canvas id="graficoTopIngredientes" height="180"></canvas></div>
+    <div class="panel"><h3>🚨 CMV mais alto</h3><div id="listaCmvAlto"></div></div>
+    <div class="panel"><h3>💎 Mais lucrativos</h3><div id="listaMaisLucrativas"></div></div>
   </div>
 </div>
 
 <script>
-const sb = supabase.createClient(
-  "https://dxkszikemntfusfyrzos.supabase.co",
-  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
-);
-
+const sb = supabase.createClient("https://dxkszikemntfusfyrzos.supabase.co","sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed");
 const moeda = v => "R$ " + Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
+let chartTipo, chartIng;
 
 async function carregarTipos(){
   const { data } = await sb.from("buffet").select("tipo");
   const tipos = [...new Set((data||[]).map(i=>i.tipo).filter(Boolean))].sort();
-  filtroTipo.innerHTML = `<option value="">Todos os tipos</option>` +
-    tipos.map(t=>`<option value="${t}">${t}</option>`).join("");
+  filtroTipo.innerHTML = `<option value="">Todos os tipos</option>` + tipos.map(t=>`<option value="${t}">${t}</option>`).join("");
 }
 
 async function carregarHome(){
   atualizadoEm.textContent = "Atualizado em " + new Date().toLocaleString("pt-BR");
-
   const tipo = filtroTipo.value;
   const q = sb.from("buffet").select("id,nome,tipo,preco_venda");
   const { data: buffet } = tipo ? await q.eq("tipo", tipo) : await q;
-
   const { data: itens } = await sb.from("buffet_itens").select("buffet_id,custo_calculado, ingredientes(nome)");
   const { count: ingredientes } = await sb.from("ingredientes").select("*",{count:"exact",head:true});
 
@@ -168,10 +116,7 @@ async function carregarHome(){
   });
 
   const topIng = Object.entries(uso).sort((a,b)=>b[1]-a[1]);
-  if(topIng[0]){
-    kpiIngredienteTop.textContent = topIng[0][0];
-    kpiIngredienteTopQtd.textContent = `Usado ${topIng[0][1]}x`;
-  }
+  if(topIng[0]){ kpiIngredienteTop.textContent=topIng[0][0]; kpiIngredienteTopQtd.textContent=`Usado ${topIng[0][1]}x`; }
 
   let somaCMV=0,qtd=0,precoT=0,custoT=0,lucroT=0,cmvAlto=0;
   const rankingCmv=[], rankingLucro=[], cmvTipo={}, qtdTipo={};
@@ -181,7 +126,7 @@ async function carregarHome(){
     if(preco>0){
       const cmv=(custo/preco)*100, lucro=preco-custo;
       somaCMV+=cmv; qtd++; precoT+=preco; custoT+=custo; lucroT+=lucro;
-      cmv>35 && cmvAlto++;
+      if(cmv>35) cmvAlto++;
       cmvTipo[b.tipo]=(cmvTipo[b.tipo]||0)+cmv;
       qtdTipo[b.tipo]=(qtdTipo[b.tipo]||0)+1;
       rankingCmv.push({nome:b.nome,cmv}); rankingLucro.push({nome:b.nome,lucro});
@@ -194,12 +139,14 @@ async function carregarHome(){
   kpiLucroTotal.textContent=moeda(lucroT);
   kpiCmvAlto.textContent=cmvAlto;
 
-  new Chart(graficoCmvTipo,{type:"bar",data:{labels:Object.keys(cmvTipo),
-    datasets:[{data:Object.keys(cmvTipo).map(k=>(cmvTipo[k]/qtdTipo[k]).toFixed(1))}]},
+  chartTipo?.destroy();
+  chartTipo = new Chart(graficoCmvTipo,{type:"bar",
+    data:{labels:Object.keys(cmvTipo),datasets:[{data:Object.keys(cmvTipo).map(k=>(cmvTipo[k]/qtdTipo[k]).toFixed(1))}]},
     options:{plugins:{legend:{display:false}}}});
 
-  new Chart(graficoTopIngredientes,{type:"bar",data:{labels:topIng.slice(0,5).map(i=>i[0]),
-    datasets:[{data:topIng.slice(0,5).map(i=>i[1])}]},
+  chartIng?.destroy();
+  chartIng = new Chart(graficoTopIngredientes,{type:"bar",
+    data:{labels:topIng.slice(0,5).map(i=>i[0]),datasets:[{data:topIng.slice(0,5).map(i=>i[1])}]},
     options:{plugins:{legend:{display:false}}}});
 
   listaCmvAlto.innerHTML = rankingCmv.sort((a,b)=>b.cmv-a.cmv).slice(0,5)
@@ -211,10 +158,7 @@ async function carregarHome(){
 
 filtroTipo.onchange = carregarHome;
 
-(async ()=>{
-  await carregarTipos();
-  await carregarHome();
-})();
+(async ()=>{ await carregarTipos(); await carregarHome(); })();
 </script>
 </body>
 </html>
